[package]
name = "mongodb-stream-rs"
version = "0.1.0"
authors = ["Dan <dan@findelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
hyper-tls = "0.4"
#clap = "3.0.0-beta.1"
clap = "2"
env_logger = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
url = "2.0"
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
bson = "1.1"
tokio = { version = "1", features = ["full"] }
